# CampoLampone2025

./: .gitmodules  README.md
Firmware/: .gitignore  CMakeLists.txt  config.h  control_speed.c  main.c  tests.c
Firmware/boards/: board_lampone.h
Firmware/controler/pid/: CMakeLists.txt
Firmware/controler/pid/includes/: pid.h
Firmware/controller/: CMakeLists.txt
Firmware/controller/pid/: CMakeLists.txt  pid.c
Firmware/controller/pid/includes/: pid.h
Firmware/controller/speed/: CMakeLists.txt  speed_controller.c
Firmware/controller/speed/includes/: speed_controller.h
Firmware/driver/: CMakeLists.txt
Firmware/driver/display/: CMakeLists.txt  display.c
Firmware/driver/display/includes/: display.h  font.h
Firmware/driver/encoder/: CMakeLists.txt  encoder.c  quadrature_encoder_substep.pio
Firmware/driver/encoder/includes/: encoder.h
Firmware/driver/motor/: CMakeLists.txt  motor.c
Firmware/driver/motor/includes/: motor.h
Firmware/driver/spi/: CMakeLists.txt  spi.c  spi_read_data.pio
Firmware/driver/spi/includes/: spi.h
Firmware/include/: config.h  spi_cmds.h  tests.h
PCB/: .gitignore
PCB/campo_main/: campo_main.kicad_pcb  campo_main.kicad_prl  campo_main.kicad_pro  campo_main.kicad_sch  fp-info-cache  sybols.kicad_sym  sym-lib-table
PCB/campo_main/footprints.pretty/: DRV8833.kicad_mod
TrafficLights/: README.md  compose.yaml
TrafficLights/campo/: index.html  package-lock.json  package.json
TrafficLights/campo/src/: App.jsx  PhaseTable.jsx
TrafficLights/fw/: main.py
TrafficLights/server/: .dockerignore  .gitignore  Dockerfile  main.py
